--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,16 @@
-body {
+@import "_variables.scss";
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: $mainBackgroundColor;
+  color: $mainFontColor;
+  overflow-x: hidden;
+  height: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +21,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  @include button;
 }
