--- a/src/styles/navigationOverlay.scss
+++ b/src/styles/navigationOverlay.scss
@@ -11,9 +11,12 @@
     z-index: 1;
 
     &__svgContainer {
-        background-color: blue;
+        background-color: $blueColor;
         height: 100%;
         flex-grow: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -25,31 +28,71 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    padding-left: 10%;
 
     &__list {
+        margin-top: 27%;
         width: 80%;
-        height: 50%;
+        height: 40%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
 
         &__item {
             list-style: none;
-            font-size: 1.7em;
+            font-size: 2.1em;
             font-weight: bold;
+            cursor: pointer;
 
             &--link {
                 text-decoration: none;
                 color: $mainFontColor;
+                transition: .3s;
+                display: inline-block;
+            }
+
+            &--link:hover {
+                transform: translateX(30%);
+            }
+        }
+
+    }
+
+    &__media {
+        margin-top: 60px;
+        width: 100%;
+        padding: 5px 25% 5px 0;
+        height: fit-content;
+        max-width: 400px;
+
+        &__list {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: space-between;
+
+
+            &__item {
+                list-style: none;
+                text-decoration: none;
+                font-size: 2em;
+                cursor: pointer;
+                transition: .4s;
+            }
+
+            &__item:hover {
+                color: $blueColor;
             }
         }
     }
+
 }
 
-@media screen and (min-width: 650px) {
+@include breakpoint(phone_portrait) {
     .overlayContainer {
+
         &__svgContainer {
             flex-grow: 1;
         }
@@ -57,5 +100,20 @@
 
     .navigation {
         flex-grow: 0;
+
     }
 }
+
+
+
+// @media screen and (min-width: 650px) {
+//     .overlayContainer {
+//         &__svgContainer {
+//             flex-grow: 1;
+//         }
+//     }
+
+//     .navigation {
+//         flex-grow: 0;
+//     }
+// }
