--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $mainBackgroundColor: rgb(231, 240, 236);
 $yellowColor: #ffdc40;
 $blueColor: #5d51f2;
 $mainFontColor: rgb(26, 25, 25);
+$brightFontColor: rgb(198, 204, 200);
 $offerPageGradient: linear-gradient(180deg, #ffcc00 0%, #e8a60c 80%);
 
 @mixin button {
@@ -38,7 +39,7 @@ $offerPageGradient: linear-gradient(180deg, #ffcc00 0%, #e8a60c 80%);
 // media
 
 $small-phone-width: 380px;
-$bigger-phone-width: 650px;
+$bigger-phone-width: 650px; // check if 600px is fine too(more phones)
 $small-tablet-width: 768px;
 $bigger-tablet-width: 1024px;
 $small-desktop-width: 1350px;
@@ -57,7 +58,10 @@ $small-desktop-width: 1350px;
     }
 
     @else if $type==small_tablet {
-        @media only screen and (min-width: #{$small-tablet-width}) {
+        @media only screen and (min-width: #{$small-tablet-width}) and (min-height: 420px
+
+            /*#{$small-phone-width}*/
+        ) {
             @content;
         }
     }
@@ -69,7 +73,7 @@ $small-desktop-width: 1350px;
     }
 
     @else if $type==tablet_portrait {
-        @media only screen and (max-width: #{$small-tablet-width}) and (min-height: #{$bigger-tablet-width}) {
+        @media only screen and (min-height: #{$bigger-phone-width}) and (min-width: #{$bigger-tablet-width}) {
             @content;
         }
     }
