--- a/src/styles/offerDescription.scss
+++ b/src/styles/offerDescription.scss
@@ -4,4 +4,117 @@
     width: 100vw;
     height: 100vh;
     background-color: $blueColor;
+    position: relative;
+
+    &__svgContainer {
+        position: absolute;
+        top: 15%;
+        left: 4%;
+        width: 25vw;
+        height: 25vw;
+        display: none;
+
+        @include breakpoint(bigger_tablet) {
+            display: block;
+        }
+    }
+
+    &__article {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        padding: 15% 12% 18%;
+        color: $brightFontColor;
+
+        &__title {
+            font-size: 1.4em;
+        }
+
+        &__line {
+            align-self: flex-start;
+            width: 50%;
+            margin: 15px 0;
+        }
+
+        &__content {
+            font-size: 1.1em;
+        }
+
+        @include breakpoint(small_phone) {
+            &__title {
+                font-size: 1.8em;
+            }
+
+            &__content {
+                font-size: 1.2em;
+            }
+        }
+
+        @include breakpoint(phone_portrait) {
+            padding: 5% 12%;
+
+            &__title {
+                font-size: 1.4em;
+            }
+
+            &__content {
+                font-size: 1.1em;
+            }
+        }
+
+        @include breakpoint(small_tablet) {
+            padding: 12% 12% 15%;
+
+            &__title {
+                font-size: 2.7em;
+            }
+
+            &__content {
+                font-size: 1.8em;
+            }
+        }
+
+        @include breakpoint(bigger_tablet) {
+            padding: 12% 10% 12% 30%;
+
+            &__title {
+                font-size: 3em;
+                margin-bottom: 8vh;
+            }
+
+            &__content {
+                font-size: 1.8em;
+            }
+        }
+
+        // @include breakpoint(tablet_portrait) {
+        //     padding: 12% 12% 15%;
+
+        //     &__title {
+        //         font-size: 2.4em;
+        //     }
+
+        //     &__content {
+        //         font-size: 1.5em;
+        //     }
+        // }
+
+        @include breakpoint(small_desktop) {
+            padding: 12% 10% 12% 30%;
+
+            &__title {
+                font-size: 3.4em;
+            }
+
+            &__content {
+                font-size: 2.3em;
+            }
+        }
+
+    }
+
 }
