--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -4,8 +4,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: transparent;
-    height: 8vh;
+    background-color: $mainBackgroundColor;
+    height: 55px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -16,13 +16,14 @@
 
     &__goBackButton {
         position: absolute;
-        top: 15%;
+        top: 50%;
+        transform: translateY(-50%);
         left: 3%;
         border-radius: 50%;
         font-size: 1.8em;
         padding: 0px;
-        width: 45px;
-        height: 45px;
+        width: 40px;
+        height: 40px;
         line-height: 50%;
     }
 
