map is added and ready for phones

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$mainBackgroundColor: rgb(231, 240, 236);
+$mainBackgroundColor: #e7f0ec; //rgb(231, 240, 236);
 $yellowColor: #ffdc40;
 $blueColor: #5d51f2;
 $mainFontColor: rgb(26, 25, 25);
