--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -48,6 +48,10 @@
             font-size: .8em;
             width: 100%;
 
+            &__error {
+                color: rgb(241, 48, 48);
+            }
+
             &--checkbox {
                 background-color: #5145E2;
                 width: 25px;
@@ -60,7 +64,7 @@
         &__label {
             width: 100%;
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
             align-items: center;
             color: $greyFontColor;
             font-size: .7em;
@@ -189,6 +193,7 @@
 
         &__form {
             width: 50%;
+            padding: 50px 0 30px 0;
 
             &__input {
                 //height: 50px;
@@ -236,6 +241,7 @@
 
         &__form {
             width: 50%;
+            padding: 0;
 
             &__input {
                 //height: 50px;
