--- a/src/styles/offerPlaces.scss
+++ b/src/styles/offerPlaces.scss
@@ -32,9 +32,10 @@
     }
 
     &__photosContainer {
+        height: 100vh;
         background-color: $blueColor;
         text-align: center;
-        position: relative;
+        overflow: hidden;
 
         &__title {
             position: absolute;
@@ -43,15 +44,25 @@
             transform: translate(-50%, -50%);
             width: 90%;
             color: $mainFontColor;
+            font-size: 2em;
         }
 
         &__photos {
             width: 100%;
-            height: 80vh;
+            height: 100%;
+            padding-top: 80px;
             background-color: $mainBackgroundColor;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+
+            &__item {
+                width: 45vw;
+                height: fit-content;
+            }
 
         }
     }
-
-    &__opinionContainer {}
 }
