--- a/src/styles/offerDescription.scss
+++ b/src/styles/offerDescription.scss
@@ -10,8 +10,8 @@
         position: absolute;
         top: 15%;
         left: 4%;
-        width: 25vw;
-        height: 25vw;
+        width: 20vw;
+        height: 20vw;
         display: none;
 
         @include breakpoint(bigger_tablet) {
@@ -79,15 +79,16 @@
         }
 
         @include breakpoint(bigger_tablet) {
-            padding: 12% 10% 12% 30%;
+            padding: 12% 10% 30% 30%;
 
             &__title {
                 font-size: 3em;
-                margin-bottom: 8vh;
+                margin-bottom: 0;
             }
 
             &__content {
-                font-size: 1.8em;
+                font-size: 1.3em;
+                line-height: 40px
             }
         }
 
@@ -108,10 +109,11 @@
 
             &__title {
                 font-size: 3.4em;
+                margin-bottom: 50px;
             }
 
             &__content {
-                font-size: 2.3em;
+                // font-size: 2.3em;
             }
         }
 
