--- a/src/styles/offerPlaces.scss
+++ b/src/styles/offerPlaces.scss
@@ -128,7 +128,8 @@
             }
 
             &__svgContainer {
-                width: 50%;
+                width: 40%;
+                height: fit-content;
             }
 
         }
@@ -152,7 +153,7 @@
         &__mapContainer {
 
             &__title {
-                padding: 0 30vh;
+                padding: 0 15vh;
                 font-size: 2.8em;
                 margin-bottom: 120px;
             }
