--- a/src/styles/opinionElement.scss
+++ b/src/styles/opinionElement.scss
@@ -2,12 +2,14 @@
 
 .opinionElement {
     width: 100%;
+    max-width: 900px;
     display: flex;
     flex-direction: row;
     background-color: $yellowColor;
     align-items: stretch;
-    min-height: 210px;
     margin-bottom: 30px;
+    // border: 3px solid $blueColor;
+    border-radius: 10px;
 
     &__imgContainer {
         padding: 10px;
@@ -15,6 +17,7 @@
 
         &__img {
             border-radius: 50%;
+            border: 4px solid $blueColor;
             height: 80px;
             width: 80px;
             margin-top: 15px;
@@ -30,10 +33,13 @@
             font-weight: normal;
             font-size: 1.3em;
             margin: 15px 0;
+            width: fit-content;
+            border-bottom: 2px solid $blueColor;
         }
 
         &__description {
             font-size: .8em;
+            margin-bottom: 5px;
         }
 
         &__signature {
@@ -48,4 +54,88 @@
             margin-bottom: 10px;
         }
     }
+
+    @include breakpoint(phone_portrait) {
+
+        &__textContainer {
+            &__title {
+                font-size: 1.5em;
+            }
+
+            &__description {
+                font-size: .9em;
+            }
+
+            &__signature {
+                font-size: .8em;
+            }
+
+            &__address {
+                font-size: .9em;
+            }
+        }
+    }
+
+    @include breakpoint(small_tablet) {
+
+        &__textContainer {
+            &__title {
+                font-size: 1.7em;
+            }
+
+            &__description {
+                font-size: .9em;
+            }
+
+            &__signature {
+                font-size: .9em;
+            }
+
+            &__address {
+                font-size: .9em;
+            }
+        }
+    }
+
+    @include breakpoint(small_tablet) {
+
+        &__textContainer {
+            &__title {
+                font-size: 1.8em;
+            }
+
+            &__description {
+                font-size: 1em;
+            }
+
+            &__signature {
+                font-size: .9em;
+            }
+
+            &__address {
+                font-size: .9em;
+            }
+        }
+    }
+
+    // @include breakpoint(tablet_portrait) {
+
+    //     &__textContainer {
+    //         &__title {
+    //             font-size: 1.9em;
+    //         }
+
+    //         &__description {
+    //             font-size: 1.1em;
+    //         }
+
+    //         &__signature {
+    //             font-size: 1em;
+    //         }
+
+    //         &__address {
+    //             font-size: 1em;
+    //         }
+    //     }
+    // }
 }
