--- a/src/styles/opinions.scss
+++ b/src/styles/opinions.scss
@@ -18,5 +18,34 @@
     &__list {
         width: 100%;
         padding: 0 5%;
+
+        @include breakpoint(phone_portrait) {
+            padding: 0 4%;
+        }
+
+        @include breakpoint(small_tablet) {
+            padding: 0 3%;
+        }
+
+        @include breakpoint(bigger_tablet) {
+            padding: 0 3% 200px 3%;
+        }
+
+        @include breakpoint(tablet_portrait) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    @include breakpoint(small_desktop) {
+
+        &__title {
+            font-size: 4.4em;
+        }
+
+        &__textContent {
+            font-size: 1.5em;
+        }
     }
 }
