--- a/src/styles/findUsContainer.scss
+++ b/src/styles/findUsContainer.scss
@@ -1,12 +1,12 @@
 @import '_variables.scss';
 
 .activeLocation {
-    border-bottom: 3px solid $yellowColor !important;
+    border-bottom: 4px solid $yellowColor !important;
 }
 
 .findUsContainer {
     width: 100%;
-    max-width: 650px;
+    max-width: 700px;
     height: fit-content;
     background-color: $blueColor;
     display: flex;
@@ -34,7 +34,7 @@
             height: fit-content;
 
             @include breakpoint(small_phone) {
-                width: 150px
+                width: 150px;
             }
         }
 
@@ -85,5 +85,60 @@
         align-items: center;
         padding: 20px;
         padding-top: 0;
+    }
+
+    @include breakpoint(phone_portrait) {
+
+        &__info {
+            height: 300px;
+
+            &__svgContainer {
+                top: 13%;
+                left: 70%;
+            }
+
+            &__button {
+                margin-bottom: 30px;
+            }
+        }
+    }
+
+    @include breakpoint(small_tablet) {
+        flex-direction: row;
+
+        &__info {
+            height: 100%;
+            flex-basis: 50%;
+
+            &__svgContainer {
+                width: 130px;
+                top: 30%;
+                left: 50%;
+            }
+
+            &__title {
+                font-size: 1.7em;
+                margin-bottom: 20px;
+            }
+
+            &__description {
+                font-size: .9em;
+                margin-bottom: 80px;
+            }
+
+            &__button {
+                margin-bottom: 100px;
+            }
+
+            &__list {
+                margin-top: 20px;
+            }
+        }
+
+        &__mapContainer {
+            padding-top: 20px;
+            flex-grow: 0;
+            width: 50%;
+        }
     }
 }
