--- a/src/styles/findUsContainer.scss
+++ b/src/styles/findUsContainer.scss
@@ -68,12 +68,19 @@
                 flex-grow: 1;
 
                 & button {
+                    cursor: pointer;
                     border: none;
                     font-size: 1em;
                     padding: 0;
                     background-color: transparent;
                     color: $brightFontColor;
                     outline: none;
+                    transition: .2s;
+                    border-bottom: 4px solid $blueColor;
+                }
+
+                & button:hover {
+                    border-bottom: 4px solid $yellowColor;
                 }
             }
         }
@@ -85,6 +92,7 @@
         align-items: center;
         padding: 20px;
         padding-top: 0;
+        z-index: 0;
     }
 
     @include breakpoint(phone_portrait) {
@@ -105,6 +113,7 @@
 
     @include breakpoint(small_tablet) {
         flex-direction: row;
+        margin: auto;
 
         &__info {
             height: 100%;
@@ -113,7 +122,7 @@
             &__svgContainer {
                 width: 130px;
                 top: 30%;
-                left: 50%;
+                left: 60%;
             }
 
             &__title {
