--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -20,11 +20,11 @@
         margin-bottom: 35px;
 
         @include breakpoint(small_tablet) {
-            margin-top: 100px;
+            margin-top: 70px;
         }
 
         @include breakpoint(bigger_tablet) {
-            margin-top: 150px;
+            margin-top: 100px;
         }
     }
 
@@ -33,6 +33,10 @@
         font-weight: 500;
         margin-bottom: 16px;
         line-height: 25px;
+
+        @include breakpoint(bigger_tablet) {
+            margin-bottom: 170px;
+        }
     }
 
     &__list {
@@ -47,13 +51,31 @@
         &__item {
             list-style: none;
             font-size: 1.3em;
+
+            @include breakpoint(bigger_tablet) {
+                font-size: 1.5em;
+            }
         }
 
         @include breakpoint(small_tablet) {
             margin-top: 100px;
         }
+    }
 
-        @include breakpoint(bigger_tablet) {}
+    @include breakpoint(phone_portrait) {
+        padding-bottom: 100px;
+    }
+
+    @include breakpoint(tablet_portrait) {
+        padding-bottom: 100px;
+    }
+
+    @include breakpoint(bigger_tablet) {
+        padding: 10vh 12% 0px 15vh;
+    }
+
+    @include breakpoint(small_desktop) {
+        padding-bottom: 150px;
     }
 
 }
